--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Fabric Properties (https://fabricmc.net/versions.html)
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.11
-loader_version=0.11.6
+minecraft_version=21w42a
+yarn_mappings=21w42a+build.3
+loader_version=0.12.2
 
 # Mod Properties
 mod_version = 1.0.10
@@ -12,4 +12,4 @@ maven_group = net.clayborn
 archives_base_name = accurate-block-placement
 
 # Dependencies
-fabric_version=0.37.0+1.17
+fabric_version=0.41.1+1.18
